[Ass2] - Needs fixes PluginExecutor